--- a/todoList.html
+++ b/todoList.html
@@ -21,7 +21,7 @@
     </nav>
     <div id="container">
         <h1>TO-DO List <i class="fas fa-plus"></i></h1>
-        <input type="text" placeholder="Add New To-Do">
+        <input type="text" placeholder="Add New To-Do" name="task">
         <ul>
             <li><span><i class="fas fa-trash-alt"></i></span> 
                 Grocery Shopping</li>
